# nrf9160-demo

./: Cargo.toml  README.md  connect.gdb  debug.sh  jlink.gdb  release.sh
.cargo/: config
src/: main.rs  secrets.rs
